# material

./: README.md
apue/: minutes.odt  minutes.txt
apue/sample/: Makefile  make.rule
apue/sample/src/file/: Makefile  cp_stdin_to_stdout.c  cp_stdin_to_stdout_.c  exec_cmd_in_child_process.c  file_hole.c  ls_dir.c  print_uid_gid.c  strerror_perror.c
babun/: .README.un~  README
book/: opengl_notes.txt
c#/: README.txt
cmake/: CMakeList.txt  Findlibdb_cxx.cmake  README.txt
dev/: build_3rd_party
font/: README.rst
llvm/: README.txt
matlab/: DrawStarBounce.m  PlotGaussWithLines.m  animate_circular_motion.m  animate_circular_motion_2.m  animate_sine.m  calcParticleEnergy.m  line_intersect.m  makebar1.m  makebar2.m  normHist1.m  normHist2.m  plotSineCosine.m  simpleCircuit1.m  simple_animation.m  simple_animation2.m  simple_plot.m  test_control_flow.m
matlab/function/: myfun.m
matlab/gui/drag_demo/: dragDemo.asv  dragDemo.m
matlab/gui/keyboard/: DemoKeyPress.m
matlab/gui/plot/loglog/: DemoLoglogPlot.m
matlab/gui/plot/meshgrid/: grid_surf.m
matlab/gui/plot/plogyy/: plotyy.m
matlab/gui/plot/semilogx_y/: DemoSemilogPlot.m
matlab/gui/plot_damped_efield/: DampedEfieldTool.fig  DampedEfieldTool.m  plotDampedEfieldF.m  plot_dampled_efield.m
matlab/gui/table/: table_students.fig  table_students.m
matlab/gui/test/: MyGuiApp.asv  MyGuiApp.fig  MyGuiApp.m  var_data.mat  var_data_1.mat  var_data_2.mat
opengl/: .README.txt.un~  README.txt  opengl_notes.txt  vao_storage
opengl/sample/: .gitignore  CMakeLists.txt  macro.cmake
opengl/sample/src/: CMakeLists.txt
opengl/sample/src/app/: app.cpp  app.h  gl_canvas.cpp  gl_canvas.h  main.cpp  main_coordinate.cpp  main_frame.cpp  main_frame.h  main_threed.cpp  main_transform.cpp
opengl/sample/src/camera/: camera.cpp  camera.h
opengl/sample/src/drawing/context/: context.h  gl_context.cpp  gl_context.h
opengl/sample/src/drawing/render/: gl_renderer.cpp  gl_renderer.h  renderer.cpp  renderer.h
opengl/sample/src/drawing/scene/: graph.cpp  graph.h
opengl/sample/src/glad/: glad.c
opengl/sample/src/glsl/: triangles.frag  triangles.vert
opengl/sample/src/gui/: tps_frame_main.pjd
opengl/sample/src/gui/rc/: tps_frame_main.xrc
opengl/sample/src/shader/: shader_info.h  shader_program.cpp  shader_program.h  shader_util.cpp  shader_util.h
opengl/sample/src/util/: log.h
opengl/sample/src/utils/: shader_util.cpp  shader_util.h
other/: resume_1.doc  resume_2.doc
python/: README.md  test.py
qt/: README.txt
qt/samples/: CMakeLists.txt  macro.cmake
qt/samples/HelloWorld/: CMakeLists.txt  HelloWorld.pro  logindialog.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reader.h  res.qrc
qt/samples/HelloWorld/src/: DialogButtonRight.ui  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc
qt/samples/src/: CMakeLists.txt  gl_window.cpp  gl_window.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newspaper.h  resource.qrc  user_info_window.cpp  user_info_window.h  user_info_window_ext.cpp  user_info_window_ext.h  userinfowindow.ui
qt/samples/src/camera/: camera.h
qt/samples/src/drawing/render/: gl_renderer.cpp  gl_renderer.h  renderer.h
qt/samples/src/drawing/scene/: drawable.cpp  drawable.h  node.h
qt/samples/src/glsl/: colors.fs  colors.vs
qt/samples/src/utils/: gl_general.cpp  gl_general.h
qt/samples/src/view/: gl_widget.cpp  gl_widget.h  logindialog.cpp  logindialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  user_info_window.cpp  user_info_window_ext.cpp  userinfowindowext.ui
refind/: README.txt  refind.conf
shadowsocks/: readme.txt
tags/: README.txt  dir_tags_global  dir_tags_recursive  sys_tags
tmux/: tmux.conf
vga/: switch_video_card.txt
vim/: copy_paste_setting  vimrc  vimrc_vc
vim/after/syntax/c/: fun.vim
ycm/: README.txt
zsh/: README.txt
